Bug 295335 - Pasting a name in the "Who is this?" input field does not activate "Confirm" Button
Summary: Pasting a name in the "Who is this?" input field does not activate "Confirm" ...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Faces-Workflow (other bugs)
Version First Reported In: 2.6.0
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-04 19:10 UTC by Frederic Grelot
Modified: 2017-08-15 21:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frederic Grelot 2012-03-04 19:10:48 UTC
When I paste a name (using Ctrl+V on Linux) in the "who is this?" field, the Confirm button does not activate. The only option to activate it is to press "Return" or modify the text (even changing the current active window does not work).

PS : Running under Fedora16/Gnome 3/Built from source.
Comment 1 Marcel Wiesweg 2012-07-05 16:23:40 UTC
Git commit e166881b8694f42159d9fcd89724a811421e9afc by Marcel Wiesweg.
Committed on 05/07/2012 at 18:21.
Pushed by mwiesweg into branch 'master'.

When autocompletion does not kick in (copy+paste in line edit), set the default tagging action
if the text is not empty. (Toplevel-most tag with the name, or creating a new tag).

M  +2    -1    NEWS
M  +5    -0    digikam/tags/addtagslineedit.cpp

http://commits.kde.org/digikam/e166881b8694f42159d9fcd89724a811421e9afc