When autocompletion does not kick in (copy+paste in line edit), set the default tagging action if the text is not empty. (Toplevel-most tag with the name, or creating a new tag).

BUG: 295335